# uuencode_lite_rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs
test_data/: random_data.bin.uu  the_machine_stops.txt  the_machine_stops.txt.uu
